stylesheet.css
/* Add your custom extension styling here */
.translate-scroll {
    background-color: rgba(32, 32, 32, 1);
    border-radius: 5px;
    color: #fff;
}
.translate-box {
    padding: 16px 5px 0 16px;
}

.tc-title-label {
    font-weight: bold;
    padding: 5px;
}

.tc-section-box {
    padding: 3px 0px 5px 0px;
    /*
    background-color: rgba(96, 96, 96, 1);
    border-radius: 5px;
    */
}
.tc-section-box:hover,
.tc-title-label:hover {
    background-color: rgba(125, 125, 125, 1);
}

.tc-title-label:rtl,
.tc-section-label:rtl,
.tc-normal-label:rtl {
    text-align: right;
}

.tc-section-label {
    font-weight: bold;
    margin-top: 5px;
}

.tc-normal-label {
}

.tc-search-entry {
    min-width: 300px;
}

.tc-search-entry .popup-menu-icon {
    icon-size: 16px;
}

